# phl-homicide-bot

./: README.md  pyproject.toml
.github/workflows/: update.yml
homicide_bot/: __init__.py  __main__.py  core.py
homicide_bot/data/: homicide_totals_daily.csv
